k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leetforce
  labels:
    app.kubernetes.io/part-of: leetforce
    pod-security.kubernetes.io/enforce: restricted
